# motify-send

./: .gitignore  CMakeLists.txt  Makefile  README.md  common.c  common.h  hint_list.c  hint_list.h  hint_parser.c  hint_parser.h  io_utils.c  io_utils.h  main.c  motify-send.c  notify.c  notify.h  storage.c  storage.h
